feat(buttons): icon animations

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "15.2.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
+    "tailwindcss-react-aria-components": "^2.0.0",
     "typescript": "^5"
   }
 }
